<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bLongMove_4" Id="{5c17765a-61ed-41df-82d0-63224002926b}">
    <Declaration><![CDATA[VAR_GLOBAL
// Долгие перемещения
// Прямое движение	
bLongMove4s01_s02_1		:BOOL;
bLongMove4s02_1_s02_2   :BOOL;
bLongMove4s02_2_s03_1   :BOOL;
bLongMove4s02_s03       :BOOL;
bLongMove4s03_1_s03_2   :BOOL;
bLongMove4s03_2_s04_1   :BOOL;
bLongMove4s03_s04       :BOOL;
bLongMove4s04_1_s04_2   :BOOL;
bLongMove4s04_2_s05     :BOOL;
bLongMove4s05_1s06		:BOOL;

bLongMove_4s01_s02_1	 :BOOL;
bLongMove_4s02_1_s02_2   :BOOL;
bLongMove_4s02_2_s03_1   :BOOL;
bLongMove_4s02_s03       :BOOL;
bLongMove_4s03_1_s03_2   :BOOL;
bLongMove_4s03_2_s04_1   :BOOL;
bLongMove_4s03_s04       :BOOL;
bLongMove_4s04_1_s04_2   :BOOL;
bLongMove_4s04_2_s05     :BOOL;
bLongMove_4s05_1s06		:BOOL;  
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>